@@ -8,7 +8,7 @@
 /*
  */
 
-#include <list>
+#include <vector>
 
 namespace utilai
 {
@@ -28,16 +28,28 @@ public:
 	//prepare chessboard with pieces 
         void startGame() { static_cast<ChessTreeNode&>(*this).startGame(); } 
 
+	//get a position from the position vector 
+	void getMove(int& row, int& col, int& oldrow, int& oldcol, int n) {
+		row = positions[n];
+		col = positions[n+1];
+		oldrow = positions[n+2];
+		oldcol = positions[n+3];
+	}
+	
+	//move deliberatly
+	void makeMove(std::string& name, const int& row, 
+			const int& col, const int& oldrow, const int& oldcol,
+			ChessTreeNode& t);
 protected:
 	//main recursive algorithm
 	bool breadthFirstSearch(ChessTreeNode& node);
 
 private:
 	ChessTreeNode root;
-	//this list has quadruples of positions of the form 
+	//this vector has quadruples of positions of the form 
 	//(row,col,oldrow,oldcol.) This is how moves that have been searched
 	//for are cached. It is filled starting with a one color after the other
-	std::list<int> positions;	
+	std::vector<int> positions;	
 };
 
 }//namespace chess 
