@@ -1,3 +1,6 @@
+03 sep 2015:
+	. made world directory in main ai directory and populated it
+	. bugfix: init of white and black boards with 7 (empty positions)
 02 sep 2015:
 	. bugfix: no more moving over other chess pieces 
 	. bugfix: move system was broken for breadth first search node building 
